--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ html, body {
     background-color: #0B141A;
     background-image: url('/img/wa-bg.png');
     background-size: cover;
-    padding: 10px;
+    padding: 0 10px 10px 10px;
     height: 100%;
     overflow-y: auto;
     -ms-overflow-style: none;  /* IE and Edge */
@@ -84,7 +84,7 @@ html, body {
 .chat-box-info {
     background: #202C33;
     display: block;
-    margin: 4px auto 6px auto;
+    margin: 16px auto 6px auto;
     width: fit-content;
     text-align: center;
     padding: .3em .8em;
@@ -92,42 +92,43 @@ html, body {
     border-radius: 0.6em;
     color: #fff6;
 }
+.msg-container {
+    display: flex;
+    flex-direction: column;
+}
 .msg {
     padding: 0.4em 0.5em 0.4em 0.8em;
     margin-bottom: 3px;
     border-radius: 8px;
     max-width: 80%;
     width: fit-content;
-    display: flex;
-    justify-content: end;
-    align-items: end;
-    flex-wrap: wrap;
     color: white;
 }
 .msg-in {
     background-color: #202C33;
-    margin-right: auto;
 }
 .msg-out {
     background-color: #005C4B;
-    margin-left: auto;
+    align-self: flex-end;
 }
-.msg-img {
-    padding: 0.4em;
+.msg-details {
+    float: right;
 }
 .msg > img {
     width: 100%;
     aspect-ratio: 1 / 1;
     border-radius: 4px;
+    margin-bottom: 0.4em;
 }
 .dblcheck {
     opacity: 0.5;
-    height: 0.8em;
+    height: 0.7em;
+    margin-left: 0.3em;
 }
 .msg-time {
     opacity: 0.5;
     font-size: 0.7em;
-    margin-left: 0.4em;
+    margin-left: 0.8em;
     justify-self: end;
     line-height: 1;
 }
@@ -177,4 +178,21 @@ html, body {
 .responses::-webkit-scrollbar-thumb {
     background-color: #fff6;
     border-radius: 99px;
+}
+
+@media screen and (max-width: 500px) {
+    .wrapper {
+        padding: 0;
+        display: block;
+    }
+    .cellphone {
+        padding: 0;
+        border: none;
+        height: 100%;
+        aspect-ratio: unset;
+    }
+    .screen {
+        width: 100%;
+        height: 100%;
+    }
 }
