--- a/style.css
+++ b/style.css
@@ -53,10 +53,33 @@ html, body {
 .chat-header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 10px;
     padding: 10px;
     height: 50px;
     background-color: #202C33;
+    color: white;
+}
+.chat-header .left,
+.chat-header .right {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 100%;
+}
+.btn-undo {
+    border-radius: 99px;
+    padding-right: 3px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background .2s ease;
+    cursor: pointer;
+}
+.btn-undo:hover {
+    background-color: #fff2;
 }
 .chat-img {
     height: 100%;
