--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ html, body {
     width: 100%;
     height: 100%;
 }
+.disabled {
+    opacity: .3;
+    user-select: none;
+    pointer-events: none;
+    cursor: pointer;
+}
 .chat {
     display: flex;
     flex-direction: column;
@@ -181,12 +187,6 @@ html, body {
     background-color: #2a3942;
     border-radius: 0.6em;
     transition: background .2s ease, opacity .4s ease;
-    cursor: pointer;
-}
-.input-trigger.disabled {
-    opacity: .3;
-    user-select: none;
-    pointer-events: none;
     cursor: pointer;
 }
 .response:hover,
