--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,62 @@
 html, body {
     height: 100%;
 }
+
+body {
+    overflow: hidden;
+}
 #app {
     width: 100%;
     height: 100vh;
     background-color: #0B141A;
 }
-.wrapper {
+.centralized-wrapper {
     height: 100%;
-    padding: 2em;
+    width: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.environment {
+    position: absolute;
+    top: 0; bottom: 0; right: 0; left: 0;
+    padding: 2em;
+    height: 100%;
+    display: none;
+}
+.main-menu {
+    color: white;
+    width: 100%;
+    height: 100%;
+    transition: all 1s ease;
+    overflow: hidden;
+}
+.main-menu .btn-start {
+    color: white;
+    font-size: 0.7em;
+}
+.main-menu .title {
+    font-family: "Aladin", sans-serif;
+    font-size: 3em;
+}
+.main-menu .description {
+    font-size: 0.7em;
+    color: #929ca2;
+}
+.cellphone.up {
+    transform: translateY(0) rotate(0);
+}
+.cellphone.on .shine {
+    opacity: .1;
+}
+.cellphone.on .screen {
+    display: block;
 }
 .cellphone {
+    transition: transform 1s ease;
+    transform: translateY(80%) rotate(5deg);
+
     aspect-ratio: 10 / 21;
     height: 85%;
     background: black;
@@ -28,6 +71,7 @@ html, body {
     width: 100%;
     position: relative;
     font-size: 14px;
+    display: none;
 }
 .shine {
     position: absolute;
@@ -35,7 +79,7 @@ html, body {
     left: 0;
     background-color: white;
     filter: blur(60px);
-    opacity: .1;
+    opacity: 0;
     transform: scale(1.2);
     pointer-events: none;
 }
@@ -109,11 +153,23 @@ html, body {
     height: 100%;
     overflow-y: auto;
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
 }
 .chat-box::-webkit-scrollbar {
-    display: none;
+    width: 0.5em;
+    padding: 2px;
 }
+.chat-box::-webkit-scrollbar-thumb {
+    border-radius: 99px;
+    background: #fff2;
+    cursor: pointer;
+}
+.chat-box::-webkit-scrollbar-thumb:hover {
+    background: #fff7;
+}
+.chat-box::-webkit-scrollbar-track {
+    background: none;
+}
+
 .chat-box-info {
     background: #202C33;
     display: block;
@@ -220,7 +276,12 @@ html, body {
     display: block;
 }
 .configs ._btn-large {
-    margin-bottom: 0.7em;
+    margin-top: 0.7em;
+}
+.configs .info {
+    text-align: center;
+    color: #fff6;
+    font-size: 0.8em;
 }
 
 @media screen and (max-width: 500px) {
