--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ body {
     color: white;
     width: 100%;
     height: 100%;
-    transition: all 1s ease;
     overflow: hidden;
+    text-align: center;
 }
 .main-menu .btn-start {
     color: white;
@@ -41,6 +41,8 @@ body {
 .main-menu .title {
     font-family: "Aladin", sans-serif;
     font-size: 3em;
+    transition: all 1s ease;
+    text-align: center;
 }
 .main-menu .description {
     font-size: 0.7em;
@@ -131,6 +133,7 @@ body {
     justify-content: center;
     transition: background .2s ease;
     cursor: pointer;
+    color: white;
 }
 ._btn:hover {
     background-color: #fff2;
@@ -240,6 +243,14 @@ body {
     padding: 10px;
     background-color: #202C33;
 }
+.chat-actions .actions {
+    display: flex;
+    align-items: center;
+    gap: 0.4em;
+}
+.chat-actions .actions .input-trigger {
+    flex: 1;
+}
 ._btn-large {
     padding: .8em 1em;
     color: #fff6;
@@ -284,11 +295,22 @@ body {
     font-size: 0.8em;
 }
 
+#map {
+    padding: 6em;
+}
+#map img {
+    flex: 1;
+    height: 100%;
+}
+.map-options {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1em;
+    gap: 1em;
+}
+
 @media screen and (max-width: 500px) {
-    .wrapper {
-        padding: 0;
-        display: block;
-    }
     .cellphone {
         padding: 0;
         border: none;
@@ -298,5 +320,7 @@ body {
     .screen {
         width: 100%;
         height: 100%;
+        border-radius: 1em;
+        overflow: hidden;
     }
 }
